@@ -11,9 +11,7 @@ INCLUDES =					\
 	-I$(top_builddir)/libgnomevfs-corba	\
 	$(GLIB_CFLAGS)				\
 	$(VFS_CFLAGS) $(WERROR)			\
-	$(OBJECT_DIRECTORY_CFLAGS)
-
-CPPFLAGS =					\
+	$(OBJECT_DIRECTORY_CFLAGS)		\
 	-D_GNU_SOURCE				\
 	-D_REENTRANT				\
 	-DPREFIX=\"$(prefix)\"			\
