@@ -11,9 +11,6 @@ INCLUDES =					\
 	$(GCONF_CFLAGS) 			\
 	$(GNOME_INCLUDEDIR)			\
 	$(VFS_CFLAGS) $(WERROR)			\
-	$(NULL)
-
-CPPFLAGS =					\
 	-D_GNU_SOURCE				\
 	-D_REENTRANT				\
 	-D_POSIX_PTHREAD_SEMANTICS		\
