@@ -10,9 +10,7 @@ INCLUDES =					\
 	$(LIBEFS_CFLAGS)			\
 	$(GCONF_CFLAGS)				\
 	$(GTK_CFLAGS)				\
-	$(VFS_CFLAGS) $(WERROR)
-
-CPPFLAGS =					\
+	$(VFS_CFLAGS) $(WERROR)			\
 	-D_GNU_SOURCE				\
 	-D_REENTRANT				\
 	-D_POSIX_PTHREAD_SEMANTICS		\
